Closed Bug 1815893 Opened 1 year ago Closed 1 year ago

Nightly Pref Sanitization Crashes

Categories

(Core :: Preferences: Backend, defect)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox110 --- unaffected
firefox111 --- wontfix
firefox112 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

This bug tracks the crashes we're seeing in Nightly after rolling out pref sanitization crashes there. We also rolled out sanitization (no crashes) in 111 which will ride out to beta and then release. We may get bug reports for that behavior (because we have some telemetry coming in we don't understand affecting a small number of users.)

As of this comment:

  • 2 crashes (1 user) for network.protocol-handler.expose.magnet - this is a user-editing-a-pref mistake, these preferences should be bools not strings
  • 18 crashes (1 user) for userChrome.searchSelectionShortcut.keycode - that's a userchrome thing and I let that community know here

10 more crashes:

  • intl.hyphenation-alias.de-AT-1996
  • intl.date_time.pattern_override.date_medium
Keywords: leave-open
Assignee: nobody → tom
Status: NEW → ASSIGNED
Pushed by tritter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8fbd405d0347
Allowlist two internationalization custom preferences r=mccr8

Set release status flags based on info from the regressing bug 1811294

No new crashes, so that's a good sign!

:tjr can this be resolved for now or do you still need the leave-open?

Flags: needinfo?(tom)

I'm still watching the crashes, so I want to keep it open for now to remind me.

Flags: needinfo?(tom)

The severity field is not set for this bug.
:KrisWright, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(kwright)

I'll make it S2 because we are tracking this for release. As we get closer to release we can triple check things and close it out.

Severity: -- → S2
Flags: needinfo?(kwright)

Okay, new crashes:

  • network.protocol-handler.expose.magnet - Seems to be 2 different users, 1 crash each
  • xpinstall.enabled - 6 crashes, all seem to be the same user, with one of them occurring after a reinstall. This is supposed to be a bool also

:tjr Is there anything to do here for 111? Marking as fix-optional for now.

Crashes are still very low and telemetry on release shows 24 distinct users affected since Jan 1. We don't know why those most of those events are coming in (e.g. Bug 1808783), but I did see three that were only affecting one person each (or maybe just one person) that we can safely add to the allowlist.

Whiteboard: [sp3]
Pushed by tritter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b345170401db
Add three more preferences to the allowlist r=freddyb
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
Whiteboard: [sp3]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: