Bug 1815893: Allowlist two internationalization custom preferences r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D169499